downloads and caches card images